--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -35,7 +35,7 @@
     ">  No work was done on the specification until the Swedish project NSÖD (a national project helping municipalities and regions to publish open data in standardized formats). NSÖD created a new version of the specification (3.0) and worked together with Matilda FoodTech and IST to further improve the specification. Soon version 3.1, 3.2 and 3.3 were released with improvements like more structured ingredient- and nutritional information.\n",
     "\n",
     "## Misc\n",
-    "* [video](https://www.youtube.com/watch?v=s8G9qM8bVI4&t=1650s) \"Ett hållbart livsmedelssystem\" - Naturvårdsverket - syntesarbete för ett hållbart livsmedelssystem\n",
+    "* [video](https://www.youtube.com/watch?v=s8G9qM8bVI4&t=1650s) \"Ett hållbart livsmedelssystem\" - Livsmedelsverket, Naturvårdsverket, kommuner... - [syntesarbete för ett hållbart livsmedelssystem](https://www.livsmedelsverket.se/om-oss/samarbeten-och-projekt/miljomalsradet#:~:text=Livsmedelsverket%20koordinerar%20syntesarbete%20f%C3%B6r%20%C3%B6kad,karakt%C3%A4riserar%20ett%20h%C3%A5llbart%20svenskt%20livsmedelssystem.)\n",
     "* **relaterat projekt med större visioner** [Utforma framtidens hållbara skolmåltidssystem!](https://www.vinnova.se/e/hallbart-matsystem/utforma-framtidens-hallbara-skolmaltidssystem/) - 7 miljarder kostar skolmaten per år --> [vi skall skapa hållbart skolmatssystem](https://www.livsmedelsverket.se/ettnyttrecept)\n",
     "  * [\"Ett nytt recept för skolmåltider – hur blir hela matsystemet hållbart?\"](https://www.livsmedelsverket.se/ettnyttrecept)\n",
     "   \n",
