--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Skolmaten - Open-Meal - lite spretiga tankar\n",
-    "* den här [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 2.4\n",
+    "* den här [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 2.5\n",
     " \n",
     "Enl. [dataportal.se identifierare ifrån RDF](https://community.dataportal.se/topic/368/dataportal-ses-identifierare-ifr%C3%A5n-rdf)\n",
     "* finns ett API för [skolmat.se](https://skolmaten.se/) på [skolmaten about](https://skolmaten.se/about/api)\n",
@@ -28,7 +28,7 @@
     ">   The project ran from november 2014 thru june 2015 and involved the municipality och Örebro with Björn Hagström as project lead, Dopter AB represented by Andreas Krohn and Mashie AB, the supplier och the system for planing meals at the municipality, represented by Erik Arnwald and Jörgen Brandt.\n",
     "\n",
     "\n",
-    "  * verkar som [Matilda Foodtech](https://www.matildafoodtech.com) och IST?!?! jobbar med detta nu ([GITHUB changes](https://github.com/Sambruk/Open-Meal/commits))\n",
+    "  * verkar som [Matilda Foodtech](https://www.matildafoodtech.com) och [IST](https://www.ist.com/se/) jobbar med detta nu ([GITHUB changes](https://github.com/Sambruk/Open-Meal/commits))\n",
     "     * [Rickard Svensson](https://www.linkedin.com/in/rickardsvenssonlund/) github [ricsv](https://github.com/ricsv)\n",
     "     * [Jimmy Revtorp](https://www.linkedin.com/in/jimmy-revtorp-7635a758) - github [Lonestarrk](https://github.com/Lonestarrk)\n",
     "     \n",
@@ -67,7 +67,7 @@
     "<img src=\"https://blogger.googleusercontent.com/img/a/AVvXsEjmEs5foxFDaKW4mXswM0Mh5C3LPdCF-rLhWblR4WdYddSu4ieLwoXqeDLHHq6Up0AMjBe-FGf-NR8l_i7Z03jv8OVjO34IiMOJ1KZRe_SgENLyxZ2m_Nzdl-ZN9RVPZV8ef4qIf9NKy-1_egw_P4g08NMovvn0gtAtFwVM-wF23nZzXYcAEnKuBYlmwg=w615-h233\" width=\"600\"/>\n",
     "</div>\n",
     "\n",
-    "* unstatshub [Good Health and Well-being](https://country-profiles.unstatshub.org/swe)\n",
+    "* UN statshub [Good Health and Well-being](https://country-profiles.unstatshub.org/swe)\n",
     "\n",
     "### Skolmaten - dataportalen: Massa poster som pekar på ett API \n",
     "* [video](https://youtu.be/z_8G8-0RqJw)\n",
@@ -99,7 +99,7 @@
     "  * data.europa.eu \"[Skolmat](https://data.europa.eu/data/datasets/https-linkoping-entryscape-net-store-1-resource-28?locale=en)\" verkar vara Linköpings kommun\n",
     "* finns säkert fler som jag missat.... 😅\n",
     "\n",
-    "**Fundering på www.dataportal.se och skolmatsdatat**\n",
+    "**Fundering på www.dataportal.se och skolmatsdatat där varje kommun skapar en post**\n",
     "1. enkel koppling Europeiska dataportalen till den svenska portalen finns det för samma dataset?\n",
     "  1. borde vara i dct:identifier men den pekar även till portalen innan svenska dataportalen se Lund [233_9780](https://data.europa.eu/api/hub/repo/distributions/1d1c2a43-0099-449c-9ae5-71568a4c12b0.rdf) som i EU portalen pekar på https://katalog.lund.se/store/1/resource/11 dvs. tillbaka till Lund jmf svenska portalens metadata [233_9780](https://admin.dataportal.se/store/233/metadata/9780?recursive=dcat)\n",
     "     1. om det är ETT API varför hitta på nya identifierare?!?!? kanske **samma som** behövs\n",
@@ -107,9 +107,7 @@
     "  udda att Europeiska dataportalen har **Cite this dataset** --> Lunds kommun, ‘School meals in the City of Lund’, accessed 2022-06-10, http://data.europa.eu/88u/dataset/https-katalog-lund-se-store-1-resource-9 dvs. pekar på sig själva... måste finnas något land som tänkt på detta?!?!?!\n",
     "  1. borde vara samma id både i svenska som Europeiska portalen annars blir det svårt att som Google AI kallar \"[Connecting Replicas of Datasets](https://ai.googleblog.com/2018/09/building-google-dataset-search-and.html#:~:text=Connecting%20Replicas%20of%20Datasets)\"\n",
     "1. ett API borde räcka med en post i dataportalen, nu finns 281 kommuner i detta API men bara en handfull har skapat post i portalen....\n",
-    "1. ingen styrning finns att detta enstaka API får samma kategorier i dataportalen se även [diskussion om kategorier](https://github.com/DIGGSweden/DCAT-AP-SE/issues/86) där man vill ha flera kategorier... känns som i detta exempel så är det styrning/kvalitetssäkring som saknas\n",
-    "  1. Jag skulle kalla detta kaos [#metadatadebt](https://twitter.com/salgo60/status/1237262589341687809?s=20&t=qYCj7VZ0jpQW0sYDv9gVsg) ingen är vinnare...\n",
-    "  1. Borde man inte i den svenska portalen kunna ange engelska kategorier så det blir rätt på EU nivå... och/eller att alla kategorier finns på minst svenska/engelska\n",
+    "1. finns ett [DCAT-AP dokument för måltidsdata](https://editera.dataportal.se/store/81/resource/3) som säger lite vagt \"ha följande kategorier: Måltidsinformation, Open Meal API, Skolmat, Meny\" se även [diskussion om kategorier](https://github.com/DIGGSweden/DCAT-AP-SE/issues/86) där man vill ha flera kategorier... \n",
     "1. **Skolenheter identifieras** av Skolverket(enl. [SFS 2010:800](https://www.riksdagen.se/sv/dokument-lagar/dokument/svensk-forfattningssamling/skollag-2010800_sfs-2010-800)) och SCB med [skolenheter i skolenhetsregistret](https://www.scb.se/lamna-uppgifter/undersokningar/Skolenhetsregistret/)  \n",
     "  1. i Wikidata har vi ett projekt där vi försöker identifiera **alla skolor som någonsin har funnits i Sverige** dvs. idag har vi alla skolor i skolenhetsregistret med unika Wikidata Qnummer se [Wikidata:WikiProject_Sweden/Schools](https://www.wikidata.org/wiki/Wikidata:WikiProject_Sweden/Schools)\n",
     "  1. Exempel Öxnered skola\n",
