--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -28,7 +28,7 @@
     ">   The project ran from november 2014 thru june 2015 and involved the municipality och Örebro with Björn Hagström as project lead, Dopter AB represented by Andreas Krohn and Mashie AB, the supplier och the system for planing meals at the municipality, represented by Erik Arnwald and Jörgen Brandt.\n",
     "\n",
     "\n",
-    "  * verkar som [Matilda Foodtech](https://www.matildafoodtech.com) och [IST](https://www.ist.com/se/) jobbar med detta nu ([GITHUB changes](https://github.com/Sambruk/Open-Meal/commits))\n",
+    "  * verkar som [Matilda Foodtech](https://www.matildafoodtech.com) och [IST](https://www.ist.com/se/)(se [ISTs app](https://www.ist.com/se/produkter/matsedel-skolmaten/)) jobbar med detta nu ([GITHUB changes](https://github.com/Sambruk/Open-Meal/commits))\n",
     "     * [Rickard Svensson](https://www.linkedin.com/in/rickardsvenssonlund/) github [ricsv](https://github.com/ricsv)\n",
     "     * [Jimmy Revtorp](https://www.linkedin.com/in/jimmy-revtorp-7635a758) - github [Lonestarrk](https://github.com/Lonestarrk)\n",
     "     \n",
