Update PSI katalog svenska kommuner.ipynb

--- a/PSI katalog svenska kommuner.ipynb
+++ b/PSI katalog svenska kommuner.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e31c2e04",
+   "id": "826edfc8",
    "metadata": {},
    "source": [
     "Hitta kommuner som inte har en öppan data portal i WD\n",
-    "* denna Notebook\n",
+    "* denna [Notebook](https://github.com/salgo60/open-data-examples/blob/master/PSI%20katalog%20svenska%20kommuner.ipynb)\n",
     "* [GIST](https://gist.github.com/salgo60/62332ca873087edddb7f58397944e62e)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a9ae8a38",
+   "id": "4093c85d",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7921c6f0",
+   "id": "c5dc4c69",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c7da189",
+   "id": "407904a6",
    "metadata": {},
    "outputs": [],
    "source": []
