--- a/Riksdagens dokument Motioner.ipynb
+++ b/Riksdagens dokument Motioner.ipynb
@@ -989,6 +989,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "JuU    59779\n",
+       "SkU    47754\n",
+       "SoU    36502\n",
+       "UbU    24308\n",
+       "SfU    24078\n",
+       "MJU    12794\n",
+       "KU     12374\n",
+       "NU     12362\n",
+       "KrU    12129\n",
+       "TU      1023\n",
+       "CU       690\n",
+       "UU       422\n",
+       "FiU      356\n",
+       "AU       318\n",
+       "FöU      234\n",
+       "          77\n",
+       "Name: organ, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dftot.organ.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
