--- a/Riksdagens dokument Motioner.ipynb
+++ b/Riksdagens dokument Motioner.ipynb
@@ -11,8 +11,10 @@
     "  * [GITHUB Riksdagen](https://github.com/salgo60/Riksdagen)\n",
     "  * [video](https://www.youtube.com/watch?v=WaEpU0FCnK8) om Open Refine och Lagstiftande [#WikidataRiksdahge](https://www.youtube.com/hashtag/wikidatariksdagen)\n",
     "* [Skapa sökfråga](http://data.riksdagen.se/dokumentlista/)  --> 245204 Motioner \n",
+    "  \n",
+    "* Wikipedia [WikiProject_Sweden/Swedish_Riksdag_documents](https://www.wikidata.org/wiki/Wikidata:WikiProject_Sweden/Swedish_Riksdag_documents) \n",
     "\n",
-    "* Wikipedia [WikiProject_Sweden/Swedish_Riksdag_documents](https://www.wikidata.org/wiki/Wikidata:WikiProject_Sweden/Swedish_Riksdag_documents)\n",
+    "* [Sida med prefix](https://data.riksdagen.se/dokumentation/sa-funkar-dokument-id/#:~:text=kod%20for%20riksmote%20eller%20ar)\n",
     "\n",
     "\n",
     "### Test H7023008 Motion 2019/20:3008 av Jonas Sjöstedt m.fl. (V)\n",
