Update Riksdagens dokument Motioner.ipynb

--- a/Riksdagens dokument Motioner.ipynb
+++ b/Riksdagens dokument Motioner.ipynb
@@ -16,6 +16,9 @@
     "\n",
     "* [Sida med prefix](https://data.riksdagen.se/dokumentation/sa-funkar-dokument-id/#:~:text=kod%20for%20riksmote%20eller%20ar)\n",
     "\n",
+    "* Buggar Riksdagens öppna api\n",
+    "  * verkar vara en bug att man mpste ange rm för att äldre dokument skall hämtas\n",
+    "\n",
     "\n",
     "### Test H7023008 Motion 2019/20:3008 av Jonas Sjöstedt m.fl. (V)\n",
     "* [text](http://data.riksdagen.se/dokument/H7023008.text) / [html](http://data.riksdagen.se/dokument/H7023008.html) /  [json](http://data.riksdagen.se/dokumentlista/?sok=H7023008&utformat=json) \n"
