Update Riksdagens dokument Motioner.ipynb

--- a/Riksdagens dokument Motioner.ipynb
+++ b/Riksdagens dokument Motioner.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "* [Sida med prefix](https://data.riksdagen.se/dokumentation/sa-funkar-dokument-id/#:~:text=kod%20for%20riksmote%20eller%20ar)\n",
     "\n",
-    "* Buggar Riksdagens öppna api\n",
+    "* [Buggar Riksdagens öppna api](https://github.com/salgo60/Wikidata_riksdagen-corpus/issues/50)\n",
     "  * verkar vara en bug att man mpste ange rm för att äldre dokument skall hämtas\n",
     "\n",
     "\n",
