--- a/Litteraturbanken Author.ipynb
+++ b/Litteraturbanken Author.ipynb
@@ -15,6 +15,9 @@
     "* [video exempel hur en post skapas](https://youtu.be/Grmp8_DZq8o)\n",
     "\n",
     "#### Other sources we sync\n",
+    "* check for [pictures in SPA for WD objecst connected to Litteraturbanken](https://github.com/salgo60/spa2Commons/blob/main/Notebook/Litteraturbanken%20SPA.ipynb)\n",
+    "  * **Status** _same as_ [WD - LIBRIS XL - Litterturbanken](https://github.com/salgo60/spa2Commons/blob/main/Notebook/Litteraturbanken%20-%20samma%20som.ipynb)\n",
+    "\n",
     "* [Arken](https://github.com/salgo60/open-data-examples/blob/master/Arken.ipynb) \n",
     "  * WD [Property:P8899](https://www.wikidata.org/wiki/Property:P8899) \n",
     "* [Kulturpersoner Uppsalakyrkogård](https://github.com/salgo60/open-data-examples/blob/master/Check%20WD%20kulturpersoner%20uppsalakyrkogardar.ipynb)\n",
